# gmosh

./: .gitignore  README.md  README.txt  addoninfo.py  compile_windows.bat  default.nix  flake.nix  gmad.py  gmafile.py  gmosh.py  gmpublish.py  makefile  pyproject.toml  wosh.py
installer/: windows.iss
package/Linux/: HOW TO INSTALL.txt  install.sh  uninstall.sh
package/OSX/: HOW TO INSTALL.txt  install.command  uninstall.command
package/OSX/Create .gma.workflow/Contents/: Info.plist  document.wflow
package/OSX/Extract .gma.workflow/Contents/: Info.plist  document.wflow
package/OSX/Upload to Workshop.workflow/Contents/: Info.plist  document.wflow
package/Windows/: HOW TO INSTALL.txt  contextmenu.reg  install.bat  removecontext.reg  uninstall.bat
required/: gmpublish_linux  gmpublish_osx
res/: gmoshui.desktop  x-gma.xml
src/: _version.py  addoninfo.py  gmafile.py  gmodfolder.py  gmosh.py  gmoshui.py  gmpublish.py  workshoputils.py
src/gmosh/: addoninfo.py  gmosh.py  gmoshui.py  workshoputils.py
src/gmosh/test/: addon.json
src/test/: addon.json
src/test/lua/autorun/: hoorah.lua
test/: addon.json
test/lua/autorun/: hoorah.lua
test/materials/: test.vmt
ui/: mainwindow.ui  progressdialog.ui
